{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 5561,
  "lineage": "b5ab861a-a341-496e-1e82-22e81fabfc87",
  "resources": [
    {
      "module": "module.myEIPs[\"eip_1\"].module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006c3c1d3e6f5be62",
            "domain": "vpc",
            "id": "eipalloc-006c3c1d3e6f5be62",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-180-242-87.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.180.242.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myEIP1"
            },
            "tags_all": {
              "Name": "myEIP1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.myInternetGateways[\"internet_gateway_1\"].module.intenet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:internet-gateway/igw-0efd80d941ccf18ec",
            "id": "igw-0efd80d941ccf18ec",
            "owner_id": "278280499340",
            "tags": {
              "Name": "myInternetGateway1"
            },
            "tags_all": {
              "Name": "myInternetGateway1"
            },
            "vpc_id": "vpc-05551afebf978c702"
          },
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myInternetGateways[\"internet_gateway_2\"].module.intenet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:internet-gateway/igw-08ea899ff6780781a",
            "id": "igw-08ea899ff6780781a",
            "owner_id": "278280499340",
            "tags": {
              "Name": "myInternetGateway2"
            },
            "tags_all": {
              "Name": "myInternetGateway2"
            },
            "vpc_id": "vpc-0a55e8224da3c4d76"
          },
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myNatGateways[\"nat_gateway_1\"].module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006c3c1d3e6f5be62",
            "association_id": "eipassoc-01c04811242e2c535",
            "connectivity_type": "public",
            "id": "nat-098f8e199f4889ad8",
            "network_interface_id": "eni-086caa2af39041733",
            "private_ip": "10.128.0.235",
            "public_ip": "18.180.242.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cdf3d41fc697a63b",
            "tags": {
              "Name": "myNatGateway1"
            },
            "tags_all": {
              "Name": "myNatGateway1"
            }
          },
          "dependencies": [
            "module.myEIPs.module.eip.aws_eip.eip",
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySubnets.module.route_table_association.aws_route_table_association.route_table_association",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myRouteTables[\"route_table_1\"].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:route-table/rtb-0c466fca9ba4b286b",
            "id": "rtb-0c466fca9ba4b286b",
            "owner_id": "278280499340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myRouteTable1"
            },
            "tags_all": {
              "Name": "myRouteTable1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05551afebf978c702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myRouteTables[\"route_table_2\"].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:route-table/rtb-029a13f18fc312b65",
            "id": "rtb-029a13f18fc312b65",
            "owner_id": "278280499340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myRouteTable2"
            },
            "tags_all": {
              "Name": "myRouteTable2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05551afebf978c702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myRouteTables[\"route_table_3\"].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:route-table/rtb-016488e84b0dcf3bc",
            "id": "rtb-016488e84b0dcf3bc",
            "owner_id": "278280499340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myRouteTable3"
            },
            "tags_all": {
              "Name": "myRouteTable3"
            },
            "timeouts": null,
            "vpc_id": "vpc-05551afebf978c702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myRouteTables[\"route_table_4\"].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:route-table/rtb-0343fd9ee7153645f",
            "id": "rtb-0343fd9ee7153645f",
            "owner_id": "278280499340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myRouteTable4"
            },
            "tags_all": {
              "Name": "myRouteTable4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a55e8224da3c4d76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myRoutes[\"route_1\"].module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0efd80d941ccf18ec",
            "id": "r-rtb-0c466fca9ba4b286b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c466fca9ba4b286b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myEIPs.module.eip.aws_eip.eip",
            "module.myInternetGateways.module.intenet_gateway.aws_internet_gateway.internet_gateway",
            "module.myNatGateways.module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySubnets.module.route_table_association.aws_route_table_association.route_table_association",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myRoutes[\"route_2\"].module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-029a13f18fc312b651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-098f8e199f4889ad8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-029a13f18fc312b65",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myEIPs.module.eip.aws_eip.eip",
            "module.myInternetGateways.module.intenet_gateway.aws_internet_gateway.internet_gateway",
            "module.myNatGateways.module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySubnets.module.route_table_association.aws_route_table_association.route_table_association",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myRoutes[\"route_3\"].module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ea899ff6780781a",
            "id": "r-rtb-0343fd9ee7153645f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0343fd9ee7153645f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myEIPs.module.eip.aws_eip.eip",
            "module.myInternetGateways.module.intenet_gateway.aws_internet_gateway.internet_gateway",
            "module.myNatGateways.module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySubnets.module.route_table_association.aws_route_table_association.route_table_association",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySecurityGroups[\"security_group_1\"].module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group/sg-057ccba79ac1719af",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-057ccba79ac1719af",
            "ingress": [],
            "name": "terraform-20240304150921493500000003",
            "name_prefix": "terraform-",
            "owner_id": "278280499340",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mySecurityGroup1"
            },
            "tags_all": {
              "Name": "mySecurityGroup1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05551afebf978c702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySecurityGroups[\"security_group_2\"].module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group/sg-06254d07b3ea8443f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06254d07b3ea8443f",
            "ingress": [],
            "name": "terraform-20240304150921492500000001",
            "name_prefix": "terraform-",
            "owner_id": "278280499340",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mySecurityGroup2"
            },
            "tags_all": {
              "Name": "mySecurityGroup2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05551afebf978c702"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySecurityGroups[\"security_group_3\"].module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group/sg-0a088902f30bafb04",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a088902f30bafb04",
            "ingress": [],
            "name": "terraform-20240304150921496300000005",
            "name_prefix": "terraform-",
            "owner_id": "278280499340",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mySecurityGroup3"
            },
            "tags_all": {
              "Name": "mySecurityGroup3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a55e8224da3c4d76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_1\"].module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b6355719454d076",
            "route_table_id": "rtb-0c466fca9ba4b286b",
            "subnet_id": "subnet-0cdf3d41fc697a63b"
          },
          "dependencies": [
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_1\"].module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:subnet/subnet-0cdf3d41fc697a63b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.128.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdf3d41fc697a63b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278280499340",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mySubnet1"
            },
            "tags_all": {
              "Name": "mySubnet1"
            },
            "vpc_id": "vpc-05551afebf978c702"
          },
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_2\"].module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0197a08b4fcaf61",
            "route_table_id": "rtb-029a13f18fc312b65",
            "subnet_id": "subnet-0f8e320ca828178ba"
          },
          "dependencies": [
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_2\"].module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:subnet/subnet-0f8e320ca828178ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.128.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8e320ca828178ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278280499340",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mySubnet2"
            },
            "tags_all": {
              "Name": "mySubnet2"
            },
            "vpc_id": "vpc-05551afebf978c702"
          },
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_3\"].module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d8075ffdff3edbe",
            "route_table_id": "rtb-029a13f18fc312b65",
            "subnet_id": "subnet-0a8d8244d3ad0fc65"
          },
          "dependencies": [
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_3\"].module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:subnet/subnet-0a8d8244d3ad0fc65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.128.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d8244d3ad0fc65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278280499340",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mySubnet3"
            },
            "tags_all": {
              "Name": "mySubnet3"
            },
            "vpc_id": "vpc-05551afebf978c702"
          },
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_4\"].module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ab5448f242c6fde",
            "route_table_id": "rtb-016488e84b0dcf3bc",
            "subnet_id": "subnet-004c4725bb3dde2ed"
          },
          "dependencies": [
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_4\"].module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:subnet/subnet-004c4725bb3dde2ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.128.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004c4725bb3dde2ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278280499340",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mySubnet4"
            },
            "tags_all": {
              "Name": "mySubnet4"
            },
            "vpc_id": "vpc-05551afebf978c702"
          },
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_5\"].module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d4183493108333a",
            "route_table_id": "rtb-0343fd9ee7153645f",
            "subnet_id": "subnet-0f3256ca49be14065"
          },
          "dependencies": [
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mySubnets[\"subnet_5\"].module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:subnet/subnet-0f3256ca49be14065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.192.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3256ca49be14065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278280499340",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mySubnet5"
            },
            "tags_all": {
              "Name": "mySubnet5"
            },
            "vpc_id": "vpc-0a55e8224da3c4d76"
          },
          "dependencies": [
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcEndpoints[\"vpc_endpoint_1\"].module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:vpc-endpoint/vpce-0ccaa0ecc2d62f092",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-0ccaa0ecc2d62f092",
            "owner_id": "278280499340",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-029a13f18fc312b65"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "myVpcEndpoint1"
            },
            "tags_all": {
              "Name": "myVpcEndpoint1"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05551afebf978c702"
          },
          "dependencies": [
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.mySubnets.module.route_table_association.aws_route_table_association.route_table_association",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcEndpoints[\"vpc_endpoint_2\"].module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:vpc-endpoint/vpce-09ff59a89209896e4",
            "dns_entry": [
              {
                "dns_name": "vpce-09ff59a89209896e4-ogtiryha.sts.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09ff59a89209896e4-ogtiryha-ap-northeast-1c.sts.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09ff59a89209896e4-ogtiryha-ap-northeast-1d.sts.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "sts.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01887033DUXB0SBIE631"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09ff59a89209896e4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06664890897c6bd5b",
              "eni-06d1ff1c1dfcb9a80"
            ],
            "owner_id": "278280499340",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-057ccba79ac1719af"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-0a8d8244d3ad0fc65",
              "subnet-0f8e320ca828178ba"
            ],
            "tags": {
              "Name": "myVpcEndpoint2"
            },
            "tags_all": {
              "Name": "myVpcEndpoint2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05551afebf978c702"
          },
          "dependencies": [
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.mySubnets.module.route_table_association.aws_route_table_association.route_table_association",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcEndpoints[\"vpc_endpoint_3\"].module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:vpc-endpoint/vpce-0ac9fe125df57fe5f",
            "dns_entry": [
              {
                "dns_name": "vpce-0ac9fe125df57fe5f-3zk7lbio.kinesis.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ac9fe125df57fe5f-3zk7lbio-ap-northeast-1c.kinesis.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ac9fe125df57fe5f-3zk7lbio-ap-northeast-1d.kinesis.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "kinesis.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01909401NX93435ODO9L"
              },
              {
                "dns_name": "data-kinesis.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01956121138NWTIGFC7G"
              },
              {
                "dns_name": "*.data-kinesis.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01956121138NWTIGFC7G"
              },
              {
                "dns_name": "control-kinesis.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0041339EUS8MUP5RBRM"
              },
              {
                "dns_name": "*.control-kinesis.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0041339EUS8MUP5RBRM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ac9fe125df57fe5f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08f499d6cb090d5e0",
              "eni-0eb0764b2dff7e106"
            ],
            "owner_id": "278280499340",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-057ccba79ac1719af"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kinesis-streams",
            "state": "available",
            "subnet_ids": [
              "subnet-0a8d8244d3ad0fc65",
              "subnet-0f8e320ca828178ba"
            ],
            "tags": {
              "Name": "myVpcEndpoint3"
            },
            "tags_all": {
              "Name": "myVpcEndpoint3"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05551afebf978c702"
          },
          "dependencies": [
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.mySubnets.module.route_table_association.aws_route_table_association.route_table_association",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcEndpoints[\"vpc_endpoint_6\"].module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:vpc-endpoint/vpce-01950cc5c4cd73313",
            "dns_entry": [
              {
                "dns_name": "vpce-01950cc5c4cd73313-5cjjqv6n.vpce-svc-02691fd610d24fd64.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-01950cc5c4cd73313-5cjjqv6n-ap-northeast-1a.vpce-svc-02691fd610d24fd64.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01950cc5c4cd73313",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0782d993c519848de"
            ],
            "owner_id": "278280499340",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a088902f30bafb04"
            ],
            "service_name": "com.amazonaws.vpce.ap-northeast-1.vpce-svc-02691fd610d24fd64",
            "state": "available",
            "subnet_ids": [
              "subnet-0f3256ca49be14065"
            ],
            "tags": {
              "Name": "myVpcEndpoint6"
            },
            "tags_all": {
              "Name": "myVpcEndpoint6"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a55e8224da3c4d76"
          },
          "dependencies": [
            "module.myRouteTables.module.route_table.aws_route_table.route_table",
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.mySubnets.module.route_table_association.aws_route_table_association.route_table_association",
            "module.mySubnets.module.subnet.aws_subnet.subnet",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_1\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-0a4e0134642aad79d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0a4e0134642aad79d",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-057ccba79ac1719af",
            "security_group_id": "sg-057ccba79ac1719af",
            "security_group_rule_id": "sgr-0a4e0134642aad79d",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule1"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule1"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_10\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-010c62054b4ade42e",
            "cidr_ipv4": "10.192.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-010c62054b4ade42e",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a088902f30bafb04",
            "security_group_rule_id": "sgr-010c62054b4ade42e",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule10"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule10"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_2\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-04f8190f814a9aad5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-04f8190f814a9aad5",
            "ip_protocol": "UDP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-057ccba79ac1719af",
            "security_group_id": "sg-057ccba79ac1719af",
            "security_group_rule_id": "sgr-04f8190f814a9aad5",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule2"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule2"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_3\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-05973cd35e2dd3a7e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-05973cd35e2dd3a7e",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-057ccba79ac1719af",
            "security_group_rule_id": "sgr-05973cd35e2dd3a7e",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule3"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule3"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_4\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-0f22bb8cb01b6c9d1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0f22bb8cb01b6c9d1",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-057ccba79ac1719af",
            "security_group_rule_id": "sgr-0f22bb8cb01b6c9d1",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule4"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule4"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_5\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-000b3e04bd0cf0f7e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6666,
            "id": "sgr-000b3e04bd0cf0f7e",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-057ccba79ac1719af",
            "security_group_rule_id": "sgr-000b3e04bd0cf0f7e",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule5"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule5"
            },
            "to_port": 6666
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_6\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-01892dce8a9bf4c4b",
            "cidr_ipv4": "10.128.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-01892dce8a9bf4c4b",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06254d07b3ea8443f",
            "security_group_rule_id": "sgr-01892dce8a9bf4c4b",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule6"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule6"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_7\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-001d8bf924e2ba7e0",
            "cidr_ipv4": "10.128.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6666,
            "id": "sgr-001d8bf924e2ba7e0",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06254d07b3ea8443f",
            "security_group_rule_id": "sgr-001d8bf924e2ba7e0",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule7"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule7"
            },
            "to_port": 6666
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_8\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-019b032318ee9ea58",
            "cidr_ipv4": "10.128.3.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-019b032318ee9ea58",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06254d07b3ea8443f",
            "security_group_rule_id": "sgr-019b032318ee9ea58",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule8"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule8"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupEgressRules[\"vpc_security_group_egress_rule_9\"].module.vpc_security_group_egress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_security_group_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-0d6d11a384b5b7b2a",
            "cidr_ipv4": "10.128.3.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6666,
            "id": "sgr-0d6d11a384b5b7b2a",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06254d07b3ea8443f",
            "security_group_rule_id": "sgr-0d6d11a384b5b7b2a",
            "tags": {
              "Name": "myVpcSecurityGroupEgressRule9"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupEgressRule9"
            },
            "to_port": 6666
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupIngressRules[\"vpc_security_group_ingress_rule_1\"].module.vpc_security_group_ingress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_security_group_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-0eadf3608b5cb21d5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0eadf3608b5cb21d5",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-057ccba79ac1719af",
            "security_group_id": "sg-057ccba79ac1719af",
            "security_group_rule_id": "sgr-0eadf3608b5cb21d5",
            "tags": {
              "Name": "myVpcSecurityGroupIngressRule1"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupIngressRule1"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupIngressRules[\"vpc_security_group_ingress_rule_2\"].module.vpc_security_group_ingress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_security_group_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-0896d08b328e37a63",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0896d08b328e37a63",
            "ip_protocol": "UDP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-057ccba79ac1719af",
            "security_group_id": "sg-057ccba79ac1719af",
            "security_group_rule_id": "sgr-0896d08b328e37a63",
            "tags": {
              "Name": "myVpcSecurityGroupIngressRule2"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupIngressRule2"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupIngressRules[\"vpc_security_group_ingress_rule_3\"].module.vpc_security_group_ingress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_security_group_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-00fa451bcb9c757b3",
            "cidr_ipv4": "10.128.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-00fa451bcb9c757b3",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06254d07b3ea8443f",
            "security_group_rule_id": "sgr-00fa451bcb9c757b3",
            "tags": {
              "Name": "myVpcSecurityGroupIngressRule3"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupIngressRule3"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupIngressRules[\"vpc_security_group_ingress_rule_4\"].module.vpc_security_group_ingress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_security_group_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-0b3349fe200c5a847",
            "cidr_ipv4": "10.128.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6666,
            "id": "sgr-0b3349fe200c5a847",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06254d07b3ea8443f",
            "security_group_rule_id": "sgr-0b3349fe200c5a847",
            "tags": {
              "Name": "myVpcSecurityGroupIngressRule4"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupIngressRule4"
            },
            "to_port": 6666
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupIngressRules[\"vpc_security_group_ingress_rule_5\"].module.vpc_security_group_ingress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_security_group_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-0697c19020d13c4a2",
            "cidr_ipv4": "10.128.3.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0697c19020d13c4a2",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06254d07b3ea8443f",
            "security_group_rule_id": "sgr-0697c19020d13c4a2",
            "tags": {
              "Name": "myVpcSecurityGroupIngressRule5"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupIngressRule5"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupIngressRules[\"vpc_security_group_ingress_rule_6\"].module.vpc_security_group_ingress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_security_group_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-09f2ff7dc3cbde8d9",
            "cidr_ipv4": "10.128.3.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6666,
            "id": "sgr-09f2ff7dc3cbde8d9",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06254d07b3ea8443f",
            "security_group_rule_id": "sgr-09f2ff7dc3cbde8d9",
            "tags": {
              "Name": "myVpcSecurityGroupIngressRule6"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupIngressRule6"
            },
            "to_port": 6666
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcSecurityGroupIngressRules[\"vpc_security_group_ingress_rule_7\"].module.vpc_security_group_ingress_rule",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_security_group_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:security-group-rule/sgr-097ed78d6b2a43260",
            "cidr_ipv4": "10.192.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-097ed78d6b2a43260",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a088902f30bafb04",
            "security_group_rule_id": "sgr-097ed78d6b2a43260",
            "tags": {
              "Name": "myVpcSecurityGroupIngressRule7"
            },
            "tags_all": {
              "Name": "myVpcSecurityGroupIngressRule7"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mySecurityGroups.module.security_group.aws_security_group.security_group",
            "module.myVpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myVpcs[\"vpc_1\"].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:vpc/vpc-05551afebf978c702",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/16",
            "default_network_acl_id": "acl-0cdcbcd8520954d69",
            "default_route_table_id": "rtb-0ee700a11e233074f",
            "default_security_group_id": "sg-04173d2f43c7b9303",
            "dhcp_options_id": "dopt-02c74a7b7cb023bb0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05551afebf978c702",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee700a11e233074f",
            "owner_id": "278280499340",
            "tags": {
              "Name": "myVpc1"
            },
            "tags_all": {
              "Name": "myVpc1"
            }
          }
        }
      ]
    },
    {
      "module": "module.myVpcs[\"vpc_2\"].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:278280499340:vpc/vpc-0a55e8224da3c4d76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.192.0.0/16",
            "default_network_acl_id": "acl-0f1616bcf7be58e65",
            "default_route_table_id": "rtb-02d2023a185d8825f",
            "default_security_group_id": "sg-0888066e6dd2c9db3",
            "dhcp_options_id": "dopt-02c74a7b7cb023bb0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a55e8224da3c4d76",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d2023a185d8825f",
            "owner_id": "278280499340",
            "tags": {
              "Name": "myVpc2"
            },
            "tags_all": {
              "Name": "myVpc2"
            }
          }
        }
      ]
    }
  ]
}